# fast-file

./: .gitignore  Cargo.toml  readme.md
src/: cli.rs  config.rs  main.rs  search.rs  util.rs
