[package]
name = "file-loc"
version = "0.1.0"
edition = "2024"
description = "🚀 Fast File Finder - Locate your filesystem (BLAZINGLY FAST🔥)"
authors = ["ronakgh97@gmaail.com"]
license = "MIT"
repository = "https://github.com/ronakgh97/file-find"
keywords = ["cli", "filesystem", "search", "fuzzy", "finder"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "ff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
walkdir = { version = "2.5.0" }
fuzzy-matcher = "0.3.7"
arboard = "3.2"
colored = "3.0.0"
ctrlc = "3.4.7"